# insightBridge

./: .gitignore  package-lock.json
backend/: .env.example  README.md  pyproject.toml  pytest.ini  schema_comments.sql  schema_metadata.json  test_early.py  test_login.json  test_login_invalid.json
backend/app/: config.py  database.py  dependencies.py  main.py  schemas.py
backend/app/middleware/: csrf.py
backend/app/routes/: __init__.py  admin.py  admin_contents.py  admission.py  auth.py  insights.py  items.py  menu.py  overview.py  query.py  theme.py  viewer.py
backend/app/services/: admin.py  agent.py  auth.py  chain.py  chat_models.py  contents.py  item_renderer.py  llm.py  mapping_validator.py  menu.py  schema.py  screen_items.py  tools.py
backend/app/utils/: sql_placeholder.py  sql_preview_validation.py  uuid_v7.py
backend/scripts/: analyze_schema.py  migrate_email_verifications.sql  migration_screen_config.sql  seed_admin_menu.sql
backend/tests/: conftest.py  test_admin.py  test_admin_groups_api.py  test_admin_menu_move.py  test_admin_menus_api.py  test_auth.py  test_card_number_format_locale.py  test_chain.py  test_menu.py  test_screen_items.py  test_sql_placeholder.py  test_sql_preview_validation.py
docs/: ARCHITECTURE.md  ARCHITECTURE_overview_matrix.md  OPEN_ISSUES.md  PLAN_overview_matrix.md  PLAN_product_mvp.md  README.md  STACK.md
frontend/: .gitignore  README.md  admin-mockup.html  empty-menu-options.html  index.html  migration-preview.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  (+1 more)
(+274 files in other folders)
